--- a/miniprogram/pages/register/register.wxml
+++ b/miniprogram/pages/register/register.wxml
@@ -4,7 +4,7 @@
      <view class="toptext" style="width: 125rpx; height: 79rpx; display: block; box-sizing: border-box; left: 213rpx; top: -95rpx; position: absolute">注册</view>
      <view class="user" style="position: absolute; left: 0rpx; top: 10rpx">
        <image src="/images/user/mine.png" class="user_name"></image>
-       <input bindblur="setUsername" placeholder="请输入用户名" type="number" />
+       <input bindblur="setUsername" placeholder="请输入用户名" type="text" />
      </view>
      <view class="password">
        <image src="/images/user/lock.png" class="ps"></image>
